--- a/src/meson.build
+++ b/src/meson.build
@@ -26,9 +26,9 @@ graphs_sources = [
   'migrate.py',
   'misc.py',
   'operations.py',
-  'plot_styles.py',
   'preferences.py',
   'project.py',
+  'styles.py',
   'transform_data.py',
   'ui.py',
   'utilities.py',
