--- a/data/meson.build
+++ b/data/meson.build
@@ -61,10 +61,10 @@ blueprints = custom_target('blueprints',
     'ui/import.blp',
     'ui/help_overlay.blp',
     'ui/item_box.blp',
-    'ui/plot_styles.blp',
     'ui/preferences.blp',
     'ui/style_box.blp',
     'ui/style_color_box.blp',
+    'ui/style_window.blp',
     'ui/transform_window.blp',
     'ui/window.blp'
   ),
