Add radians sclae
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/src/meson.build
+++ b/src/meson.build
@@ -28,6 +28,7 @@ graphs_sources = [
   'operations.py',
   'preferences.py',
   'project.py',
+  'scales.py',
   'styles.py',
   'transform_data.py',
   'ui.py',
