implement PreferencesWindow in Vala
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/src/meson.build
+++ b/src/meson.build
@@ -27,7 +27,6 @@ python.install_sources(
 	  'migrate.py',
 	  'misc.py',
 	  'operations.py',
-	  'preferences.py',
 	  'project.py',
 	  'scales.py',
 	  'styles.py',
@@ -46,6 +45,8 @@ graphs_lib = shared_library(
 		'data.vala',
 		'figure_settings.vala',
 		'misc.vala',
+		'preferences.vala',
+		'utilities.vala',
   ), gresource,
       vala_gir: 'Graphs-1.gir',
   dependencies: dependencies,
