--- a/src/meson.build
+++ b/src/meson.build
@@ -10,44 +10,46 @@ configuration: conf,
 
 python.install_sources(
   files(
-	  'actions.py',
-	  'add_equation.py',
-	  'artist.py',
-	  'canvas.py',
-	  'clipboard.py',
-	  'data.py',
-	  'edit_item.py',
-	  'export_figure.py',
-	  'figure_settings.py',
-	  'file_import.py',
-	  'file_io.py',
-	  'item.py',
-	  'item_box.py',
-	  'main.py',
-	  'migrate.py',
-	  'misc.py',
-	  'operations.py',
-	  'project.py',
-	  'scales.py',
-	  'styles.py',
-	  'transform_data.py',
-	  'ui.py',
-	  'utilities.py',
-	  'window.py',
+    'actions.py',
+    'add_equation.py',
+    'artist.py',
+    'canvas.py',
+    'clipboard.py',
+    'data.py',
+    'edit_item.py',
+    'export_figure.py',
+    'figure_settings.py',
+    'file_import.py',
+    'file_io.py',
+    'item.py',
+    'item_box.py',
+    'main.py',
+    'migrate.py',
+    'misc.py',
+    'operations.py',
+    'project.py',
+    'scales.py',
+    'styles.py',
+    'transform_data.py',
+    'ui.py',
+    'utilities.py',
+    'window.py',
   ),
   subdir: project_name
 )
 
 graphs_lib = shared_library(
-  'graphs', files(
-		'application.vala',
-		'clipboard.vala',
-		'data.vala',
-		'figure_settings.vala',
-		'misc.vala',
-		'preferences.vala',
-		'utilities.vala',
-  ), gresource,
+  'graphs',
+  files(
+    'application.vala',
+    'clipboard.vala',
+    'data.vala',
+    'figure_settings.vala',
+    'misc.vala',
+    'preferences.vala',
+    'utilities.vala',
+  ),
+     vala_args: ['--gresources=' + gresource.full_path()],
       vala_gir: 'Graphs-1.gir',
   dependencies: dependencies,
        install: true,
