--- a/src/meson.build
+++ b/src/meson.build
@@ -48,8 +48,7 @@ graphs_lib = shared_library(
     'misc.vala',
     'preferences.vala',
     'utilities.vala',
-  ),
-     vala_args: ['--gresources=' + gresource.full_path()],
+  ), blueprints_hack, gresource_bundle,
       vala_gir: 'Graphs-1.gir',
   dependencies: dependencies,
        install: true,
