--- a/data/meson.build
+++ b/data/meson.build
@@ -50,26 +50,41 @@ if compile_schemas.found()
        args: ['--strict', '--dry-run', meson.current_source_dir()])
 endif
 
+blueprints_source = [
+  'ui/add_equation_window.blp',
+  'ui/add_style.blp',
+  'ui/dialogs.blp',
+  'ui/edit_item.blp',
+  'ui/export_figure.blp',
+  'ui/figure_settings.blp',
+  'ui/import.blp',
+  'ui/help_overlay.blp',
+  'ui/item_box.blp',
+  'ui/preferences.blp',
+  'ui/style_box.blp',
+  'ui/style_color_box.blp',
+  'ui/style_window.blp',
+  'ui/transform_window.blp',
+  'ui/window.blp'
+]
+
+blueprints_ui = []
+blueprints_vala = []
+foreach b : blueprints_source
+	blueprints_ui += b.replace('.blp', '.ui')
+	blueprints_vala += b.replace('ui/', '') + '.vala'
+endforeach
+
 blueprints = custom_target('blueprints',
-  input: files(
-    'ui/add_equation_window.blp',
-    'ui/add_style.blp',
-    'ui/dialogs.blp',
-    'ui/edit_item.blp',
-    'ui/export_figure.blp',
-    'ui/figure_settings.blp',
-    'ui/import.blp',
-    'ui/help_overlay.blp',
-    'ui/item_box.blp',
-    'ui/preferences.blp',
-    'ui/style_box.blp',
-    'ui/style_color_box.blp',
-    'ui/style_window.blp',
-    'ui/transform_window.blp',
-    'ui/window.blp'
-  ),
+  input: blueprints_source,
   output: '.',
   command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
+)
+
+blueprints_hack = custom_target('blueprints_hack',
+	input: blueprints,
+	output: blueprints_vala,
+	command: [find_program('touch'), '@OUTPUT@'],
 )
 
 gresource_name = application_id + '.gresource.xml'
