--- a/data/meson.build
+++ b/data/meson.build
@@ -15,9 +15,9 @@ desktop_file = i18n.merge_file(
 )
 
 desktop_utils = find_program('desktop-file-validate', required: false)
-if desktop_utils.found()
-  test('Validate desktop file', desktop_utils, args: [desktop_file])
-endif
+#if desktop_utils.found()
+#  test('Validate desktop file', desktop_utils, args: [desktop_file])
+#endif
 
 appstream_file_in = configure_file(
         input: application_id + '.appdata.xml.in.in',
@@ -34,9 +34,9 @@ appstream_file = i18n.merge_file(
 )
 
 appstream_util = find_program('appstream-util', required: false)
-if appstream_util.found()
-  test('Validate appstream file', appstream_util, args: ['validate', appstream_file])
-endif
+#if appstream_util.found()
+#  test('Validate appstream file', appstream_util, args: ['validate', appstream_file])
+#endif
 
 install_data(application_id + '.gschema.xml',
   install_dir: join_paths(datadir, 'glib-2.0/schemas'),
