--- a/meson.build
+++ b/meson.build
@@ -65,6 +65,23 @@ subdir('data')
 subdir('src')
 subdir('po')
 
+
+
+test_env = [
+    'pkgdatadir={pkgdatadir}',
+    'application_id='.format(application_id),
+]
+
+test(
+    'pytest',
+    find_program('pytest'),
+    args: [meson.project_source_root() + '/tests'],
+    env: [
+        'pkgdatadir=' + pkgdatadir,
+        'application_id=' + application_id,
+    ],
+)
+
 gnome.post_install(
      glib_compile_schemas: true,
     gtk_update_icon_cache: true,
