Update tests to match new names
Add back validation tests

Only run pytest if available

Fix validation tests

Linting

Create own meson file for tests

--- a/data/meson.build
+++ b/data/meson.build
@@ -14,10 +14,16 @@ desktop_file = i18n.merge_file(
   install_dir: join_paths(datadir, 'applications')
 )
 
-desktop_utils = find_program('desktop-file-validate', required: false)
-#if desktop_utils.found()
-#  test('Validate desktop file', desktop_utils, args: [desktop_file])
-#endif
+desktop_file_validate = find_program('desktop-file-validate', required: false)
+if desktop_file_validate.found()
+  test(
+    'validate-desktop',
+    desktop_file_validate,
+    args: [
+      desktop_file.full_path()
+    ]
+  )
+endif
 
 appstream_file_in = configure_file(
         input: application_id + '.appdata.xml.in.in',
@@ -34,9 +40,14 @@ appstream_file = i18n.merge_file(
 )
 
 appstream_util = find_program('appstream-util', required: false)
-#if appstream_util.found()
-#  test('Validate appstream file', appstream_util, args: ['validate', appstream_file])
-#endif
+if appstream_util.found()
+  test(
+    'validate-metainfo', appstream_util,
+    args: [
+      'validate-relax', '--nonet', appstream_file.full_path()
+    ]
+  )
+endif
 
 install_data(application_id + '.gschema.xml',
   install_dir: join_paths(datadir, 'glib-2.0/schemas'),
