--- a/meson.build
+++ b/meson.build
@@ -64,23 +64,7 @@ endif
 subdir('data')
 subdir('src')
 subdir('po')
-
-
-
-test_env = [
-    'pkgdatadir={pkgdatadir}',
-    'application_id='.format(application_id),
-]
-
-test(
-    'pytest',
-    find_program('pytest'),
-    args: [meson.project_source_root() + '/tests'],
-    env: [
-        'pkgdatadir=' + pkgdatadir,
-        'application_id=' + application_id,
-    ],
-)
+subdir('tests')
 
 gnome.post_install(
      glib_compile_schemas: true,
