--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install deps
       run: |
-        dnf -y install docker python3-pytest
+        dnf -y install docker
     - name: Set up QEMU
       id: qemu
       uses: docker/setup-qemu-action@v2
