--- a/src/graphs.in
+++ b/src/graphs.in
@@ -57,8 +57,8 @@ if __name__ == "__main__":
     )
     logging.getLogger("matplotlib.font_manager").disabled = True
 
-    from graphs.application import GraphsApplication
-    sys.exit(GraphsApplication(
+    from graphs.application import PythonApplication
+    sys.exit(PythonApplication(
         "@APPLICATION_ID@", version="@VERSION@", name="@NAME@",
         author="@AUTHOR@", website="@HOMEPAGE_URL@", issues="@ISSUE_URL@",
         pkgdatadir="@PKGDATADIR@",
