Add curve fitting (#475)
Add Curve Fitting to Graphs.

---------

Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>
Co-authored-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/meson.build
+++ b/data/meson.build
@@ -64,10 +64,12 @@ endif
 blueprints_source = [
   'ui/add_equation_window.blp',
   'ui/add_style.blp',
+  'ui/curve_fitting.blp',
   'ui/dialogs.blp',
   'ui/edit_item.blp',
   'ui/export_figure.blp',
   'ui/figure_settings.blp',
+  'ui/fitting_parameters.blp',
   'ui/import.blp',
   'ui/help_overlay.blp',
   'ui/item_box.blp',
