--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -72,4 +72,5 @@ apps:
     common-id: se.sjoerd.Graphs
     environment:
       PYTHONPATH: $SNAP/usr/lib/python3.10/dist-packages:$PYTHONPATH
+      GI_TYPELIB_PATH: $SNAP/usr/share/gir-1.0:$GI_TYPELIB_PATH
     extensions: [gnome]
