--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -17,16 +17,60 @@ slots:
     name: se.sjoerd.Graphs
 
 parts:
+  numpy:
+    source: https://github.com/numpy/numpy.git
+    source-tag: 'v1.25.2'
+    plugin: python
+    build-environment:
+      - PATH: ${CRAFT_PART_INSTALL}/bin:${PATH}
+      - PYTHONPATH: ""
+    python-packages:
+      - scipy==1.11.2
+      - python-dateutil==2.8.2
+      - pyparsing==3.0.9
+      - Pillow==10.0.0
+      - packaging==23.1
+      - contourpy==1.1.0
+      - kiwisolver==1.4.5
+      - fonttools==4.41.1
+      - cycler==0.11.0
+      - matplotlib==3.8.0
+      - numexpr==2.8.6
+      - mpmath==1.3.0
+      - sympy==1.12
+    prime:
+      - -usr/bin/activate
+      - -usr/bin/activate.csh
+      - -usr/bin/activate.fish
+      - -usr/bin/Activate.ps1
+      - -usr/bin/python
+      - -usr/bin/python3
+      - -usr/bin/python3.10
+      - -usr/bin/pip
+      - -usr/bin/pip3
+      - -usr/bin/pip3.10
+      - -pyvenv.cfg
+      - -share
+      - -include
+      - -lib
+      - -lib64
+      - -usr/lib/python3/dist-packages/pip*
+      - -usr/lib/python3/dist-packages/setuptools*
+      - -usr/lib/python3/dist-packages/pkg_resources*
+      - -usr/lib/python3/dist-packages/setuptools*
+    organize: 
+      bin: usr/bin
+      lib/python3.10/site-packages: usr/lib/python3/dist-packages
+
   blueprint-compiler:
     source: https://gitlab.gnome.org/jwestman/blueprint-compiler.git
     source-tag: 'v0.10.0'
     plugin: meson
     meson-parameters:
       - --prefix=/usr
-    override-prime: |
-      echo 'Skip'
+    override-prime: ''
   graphs:
-    after: [ blueprint-compiler ]
+    after: [ blueprint-compiler, numpy ]
     plugin: meson
     source: .
     meson-parameters:
@@ -40,10 +84,7 @@ parts:
       patch -p1 < $CRAFT_PROJECT_DIR/snap/graphs.patch
     override-build: |
       craftctl default
-      pip install --prefix=$CRAFT_PART_INSTALL/usr matplotlib==3.8.0
-      pip install --prefix=$CRAFT_PART_INSTALL/usr scipy==1.11.2
       sed -e '1c#!/usr/bin/env python3' -i ${CRAFT_PART_INSTALL}/snap/graphs/current/usr/bin/graphs
-      sed -e '1c#!/usr/bin/python3' -i $CRAFT_PART_INSTALL/usr/local/bin/*
       mkdir -p $CRAFT_PART_INSTALL/meta/gui
       cp -r $CRAFT_PART_INSTALL/snap/graphs/current/usr/share/icons $CRAFT_PART_INSTALL/meta/gui/
       for i in `find $CRAFT_PART_INSTALL/meta/gui/icons -name "*.svg" -o -name "*.png"`; do
@@ -51,8 +92,6 @@ parts:
       done
     organize:
       snap/graphs/current/usr: usr
-      usr/local: usr
-      usr/lib/python3: usr/lib/python3.10
     parse-info: [usr/share/appdata/se.sjoerd.Graphs.appdata.xml]
     
     
@@ -62,6 +101,6 @@ apps:
     desktop: usr/share/applications/se.sjoerd.Graphs.desktop
     common-id: se.sjoerd.Graphs
     environment:
-      PYTHONPATH: $SNAP/usr/lib/python3.10/dist-packages:$PYTHONPATH
+      PYTHONPATH: $SNAP/usr/lib/python3/dist-packages:$PYTHONPATH
       GI_TYPELIB_PATH: $SNAP/usr/lib/$CRAFT_ARCH_TRIPLET/girepository-1.0:$GI_TYPELIB_PATH
     extensions: [gnome]
