--- a/data/se.sjoerd.Graphs.appdata.xml.in.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in.in
@@ -50,7 +50,7 @@
   </screenshots>
   <releases>
     <release version="1.7.0" date="2023-06-14">
-      <description>
+      <description translatable="no">
         <p>New in Graphs:</p>
         <ul>
           <li>Curve fitting functionality has been added to Graphs</li>
@@ -83,7 +83,7 @@
       </description>
     </release>
     <release version="1.6.2" date="2023-06-14">
-      <description>
+      <description translatable="no">
         <p>Bugfixes:</p>
         <ul>
           <li>Fixes a bug where the first data point would not be loaded</li>
@@ -102,7 +102,7 @@
       </ul>
     </release>
     <release version="1.6.0" date="2023-06-13">
-      <description>
+      <description translatable="no">
         <p>New in Graphs:</p>
         <ul>
           <li>Data can now be opened directly from project files.</li>
@@ -132,7 +132,7 @@
       </description>
     </release>
     <release version="1.5.2" date="2023-05-09">
-      <description>
+      <description translatable="no">
         <p>Changes:</p>
         <ul>
           <li>Add support for .xry file types from Leybold X-Ray apparatus.</li>
@@ -148,7 +148,7 @@
       </description>
     </release>
     <release version="1.5.1" date="2023-04-17">
-      <description>
+      <description translatable="no">
         <p>Hotfix update with bug fixes:</p>
         <ul>
           <li>Fixes a bug that prevents "Add Equation" from generating new data</li>
@@ -158,7 +158,7 @@
       </description>
     </release>
     <release version="1.5.0" date="2023-04-16">
-      <description>
+      <description translatable="no">
         <p>Major Highlights</p>
         <ul>
           <li>Massive UI overhaul</li>
@@ -206,7 +206,7 @@
       </description>
     </release>
     <release version="1.4.1" date="2023-01-30">
-      <description>
+      <description translatable="no">
         <p>Minor update with updated AppID.</p>
         <ul>
           <li>The sidebar is now retractable</li>
@@ -218,7 +218,7 @@
       </description>
     </release>
     <release version="1.4.0" date="2023-01-28">
-      <description>
+      <description translatable="no">
         <p>Major update with a significant UI overhaul.</p>
         <p>New in Graphs:</p>
         <ul>
@@ -243,7 +243,7 @@
       </description>
     </release>
     <release version="1.3.5" date="2023-01-14">
-      <description>
+      <description translatable="no">
         <p>Minor update with some bugfixes, plus a new logo!</p>
         <p>New in Graphs:</p>
         <ul>
@@ -257,7 +257,7 @@
       </description>
     </release>
     <release version="1.3.4" date="2023-01-05">
-      <description>
+      <description translatable="no">
         <p>Slightly bigger update than usual, with new features and some bug fixes.</p>
         <p>New in Graphs:</p>
         <ul>
@@ -284,7 +284,7 @@
       </description>
     </release>
     <release version="1.3.3" date="2023-01-03">
-      <description>
+      <description translatable="no">
         <p>Minor update mostly focused on the color picker, plus minor quality of life stuff.</p>
         <ul>
           <li>Changed the color picker to a pop-over window</li>
@@ -296,7 +296,7 @@
       </description>
     </release>
     <release version="1.3.2" date="2023-01-02">
-      <description>
+      <description translatable="no">
         <ul>
           <li>Made all pop-up windows modal</li>
           <li>Added the ability to change axes labels and the title of the plot by double clicking</li>
@@ -304,7 +304,7 @@
       </description>
     </release>
     <release version="1.3.1" date="2022-12-31">
-      <description>
+      <description translatable="no">
         <p>Brings some minor quality of life features.</p>
         <ul>
           <li>Ctrl+S now opens the Save Data dialog</li>
@@ -313,7 +313,7 @@
       </description>
     </release>
     <release version="1.3.0" date="2022-12-30">
-      <description>
+      <description translatable="no">
         <p>Probably last update of the year, most noteworthy is the ability to plot data on right and bottom axis independently. Operations on cutting data still work seamlessly, even when using different axes! Next few updates will probably mainly focus on polish and code clean-up.</p>
         <ul>
           <li>Added the option to plot data on the right-hand axis</li>
@@ -326,7 +326,7 @@
       </description>
     </release>
     <release version="1.2.1" date="2022-12-21">
-      <description>
+      <description translatable="no">
         <p>Hot-fix update, fixes some bugs with the new "plot settings" window</p>
         <ul>
           <li>Fixed a bug where the axes labels and title would go back to default when plot settings was opened twice</li>
@@ -338,7 +338,7 @@
       </description>
     </release>
     <release version="1.2.0" date="2022-12-21">
-      <description>
+      <description translatable="no">
         <p>With the ability to edit axes properties without changing the default settings, all essential features are in and it's time to declare v1.2.0. Also added some QoL features. Still many ideas are yet to be implemented. See current changelog below:</p>
         <ul>
           <li>The "Plot Settings" button now also contains a tab to edit the axes properties</li>
@@ -355,7 +355,7 @@
       </description>
     </release>
     <release version="1.1.2" date="2022-12-19">
-      <description>
+      <description translatable="no">
         <ul>
           <li>Added a "Plot settings" option to control the individual line settings</li>
           <li>Added a pop-up button to show the graph in a separate window</li>
@@ -366,7 +366,7 @@
       </description>
     </release>
     <release version="1.1.1" date="2022-12-19">
-      <description>
+      <description translatable="no">
         <p>Minor update, next update will add an option to control individual line settings (e.g. thickness and style):</p>
         <ul>
           <li>Cleaned up preferences, making it easier to find the correct setting</li>
@@ -377,7 +377,7 @@
       </description>
     </release>
     <release version="1.1.0" date="2022-12-17">
-      <description>
+      <description translatable="no">
         <ul>
           <li>Improved the UI for the "Add equation" and "Transform data" windows</li>
           <li>Added import settings</li>
@@ -390,7 +390,7 @@
       </description>
     </release>
     <release version="1.0.3" date="2022-12-16">
-      <description>
+      <description translatable="no">
         <p>Minor update with some bug fixes, next update will focus on adding more options for file imports:</p>
         <ul>
           <li>Fixed a bug where files with a special character in the name didn't save</li>
@@ -401,7 +401,7 @@
       </description>
     </release>
     <release version="1.0.2" date="2022-12-15">
-      <description>
+      <description translatable="no">
         <ul>
           <li>Changed the name of the application to be more in line with the GNOME HIG</li>
           <li>Transformation window can be closed with the escape button</li>
@@ -411,7 +411,7 @@
       </description>
     </release>
     <release version="1.0.1" date="2022-12-15">
-      <description>
+      <description translatable="no">
         <ul>
           <li>Add equation window can now be closed with the escape button</li>
           <li>File chooser dialog and preference dialogs are modal (stick to parent window)</li>
@@ -424,7 +424,7 @@
       </description>
     </release>
     <release version="1.0.0" date="2022-12-14">
-      <description>
+      <description translatable="no">
         <ul>
           <li>Initial release</li>
         </ul>
