--- a/data/meson.build
+++ b/data/meson.build
@@ -74,8 +74,8 @@ blueprints_source = [
   'ui/help_overlay.blp',
   'ui/item_box.blp',
   'ui/preferences.blp',
-  'ui/style_box.blp',
   'ui/style_color_box.blp',
+  'ui/style_preview.blp',
   'ui/style_window.blp',
   'ui/transform_window.blp',
   'ui/window.blp'
