wip: redesign styles
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/meson.build
+++ b/data/meson.build
@@ -75,8 +75,8 @@ blueprints_source = [
   'ui/item_box.blp',
   'ui/preferences.blp',
   'ui/style_color_box.blp',
+  'ui/style_editor.blp',
   'ui/style_preview.blp',
-  'ui/style_window.blp',
   'ui/transform_window.blp',
   'ui/window.blp'
 ]
