General improvements and fixes
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/src/meson.build
+++ b/src/meson.build
@@ -29,6 +29,7 @@ python.install_sources(
     'operations.py',
     'parse_file.py',
     'scales.py',
+    'style_io.py',
     'styles.py',
     'transform_data.py',
     'ui.py',
