--- a/data/se.sjoerd.Graphs.appdata.xml.in.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in.in
@@ -49,17 +49,21 @@
     </screenshot>
   </screenshots>
   <releases>
-    <release version="1.7.0" date="2023-06-14">
+    <release version="1.7.0" date="2023-10-18">
       <description translatable="no">
         <p>New in Graphs:</p>
         <ul>
           <li>Curve fitting functionality has been added to Graphs</li>
+          <li>A new Yaru style has been added, which is set as the default system style for the Snap package when Yaru is used in the system, offering a more consistent experience</li>
+          <li>The style editor has been revamped completely and now shows previews for each style</li>
           <li>New scaling options are available for the axes, allowing for radian, square root and inverse scaling</li>
           <li>Graphs now includes forwards/backwards buttons to quickly navigate to the next and previous view</li>
           <li>Transparent colours for the lines are now supported</li>
           <li>Support has been added for cotangents, secants and cosecants</li>
           <li>Headers are now written to exported files if present in the originally imported data</li>
           <li>Importing column data is now more robust, supporting expressions as data points</li>
+          <li>Pinch and scroll to zoom gestures are now supported</li>
+          <li>The title font size can now be changed with respect to the overall font size</li>
         </ul>
         <p>Changed behaviour:</p>
         <ul>
@@ -69,24 +73,21 @@
           <li>The used axes limits are now saved when saving/loading a project</li>
           <li>The preferences have been redesigned for a more intuitive navigation</li>
           <li>The shortcuts have been modified to follow the rest of the GNOME ecosystem </li>
+          <li>The logic for placing the legend has been changed, so that it now properly moves away when it intersects with a curve</li>
+          <li>The behaviour of the "Shift" action has been changed to be more consistent when only part of the data span is selected </li>
         </ul>
         <p>Bugfixes and changes under the hood:</p>
         <ul>
+          <li>Graphs has been migrated to GNOME 45, and uses the new Libadwaita 1.4 widgets </li>
           <li>Number inputs are now handled safely without calling the Python eval function</li>
-          <li>The clipboard implementation has been rewritten </li>
+          <li>The clipboard implementation has been rewritten from scratch </li>
           <li>The scale buttons in the view menu are now properly changed when the scale has been changed from the figure settings </li>
           <li>Automatic scaling is now handled properly even when the dataset contains infinite values </li>
           <li>Graphs now uses unit tests, reducing the risk of regression bugs </li>
           <li>Part of the code-base has been migrated to Vala</li>
+          <li>Fixed a bug where "Skip rows" did not work properly with single-column data</li>
           <li>Graphs translations are now hosted on Weblate</li>
-        </ul>
-      </description>
-    </release>
-    <release version="1.6.2" date="2023-06-14">
-      <description translatable="no">
-        <p>Bugfixes:</p>
-        <ul>
-          <li>Fixes a bug where the first data point would not be loaded</li>
+          <li>More smaller changes and fixes throughout the code-base</li>
         </ul>
       </description>
     </release>
@@ -95,6 +96,7 @@
       <ul>
         <li>Fixed a bug where "Export Figure" and "Preferences" could not be loaded</li>
         <li>The "Add data from file" dialog now has filters to make it easier to find the required files.</li>
+        <li>Fixes a bug where the first data point would not be loaded</li>
         <li>Fixed a bug all styles in the style manager had a check-mark if the system preferred style was used.</li>
         <li>Fixed a bug where the legend would not be removed from the graph when toggled off, until it was completely reloaded.</li>
         <li>Automatic axes limits are no longer rounded, which used to lead to problems with the scaling when using data span with a large amount of significant digits.</li>
@@ -124,8 +126,8 @@
         <p>Bugfixes:</p>
         <ul>
           <li>Fixed an upstream bug in Matplotlib where part of the Graph would be cut off at scaled resolutions.</li>
-          <li>Fixed a bug where the legend styles could not be deleted</li>
-          <li>Fixed a bug where the legend styles could not be reset to defaults</li>
+          <li>Fixed a bug where the styles could not be deleted</li>
+          <li>Fixed a bug where the styles could not be reset to defaults</li>
           <li>Fixed a bug where the legend would remain when all data is removed</li>
           <li>Fixed a bug where Graphs would crash when the name of an item is changed and a new item is selected from the dropdown.</li>
         </ul>
