Stricter appdata check
Fix indentation

--- a/data/meson.build
+++ b/data/meson.build
@@ -43,9 +43,7 @@ appstream_util = find_program('appstream-util', required: false)
 if appstream_util.found()
   test(
     'Validate appstream file', appstream_util,
-    args: [
-      'validate-relax', '--nonet', appstream_file.full_path()
-    ]
+    args: ['validate', appstream_file.full_path()]
   )
 endif
 
