--- a/data/se.sjoerd.Graphs.desktop.in.in
+++ b/data/se.sjoerd.Graphs.desktop.in.in
@@ -6,3 +6,4 @@ Terminal=false
 Type=Application
 Categories=Education;Science
 StartupNotify=true
+Keywords=Plotting;Graphs;Mathematics;Equations;Data;Plot;Manipulation;
