--- a/data/se.sjoerd.Graphs.desktop.in.in
+++ b/data/se.sjoerd.Graphs.desktop.in.in
@@ -6,4 +6,5 @@ Terminal=false
 Type=Application
 Categories=Education;Science
 StartupNotify=true
+MimeType=application/graphs
 Keywords=Plotting;Graph;Graphing;Science;Mathematics;Math;Equations;Data;Plot;Visualisation;Visualization;Fitting;xrdml;
