--- a/meson.build
+++ b/meson.build
@@ -70,4 +70,5 @@ gnome.post_install(
      glib_compile_schemas: true,
     gtk_update_icon_cache: true,
   update_desktop_database: true,
+  update_mime_database: true,
 )
