--- a/data/se.sjoerd.Graphs.desktop.in.in
+++ b/data/se.sjoerd.Graphs.desktop.in.in
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Name=@NAME@
-Exec=@PROJECT_NAME@
+Exec=@PROJECT_NAME@ %U
 Icon=@APPLICATION_ID@
 Terminal=false
 Type=Application
 Categories=Education;Science
 StartupNotify=true
-MimeType=application/graphs
+MimeType=application/se.sjoerd.Graphs;text/plain;text/xy;text/dat;text/csv;text/xrdml;text/xry;text/txt
 Keywords=Plotting;Graph;Graphing;Science;Mathematics;Math;Equations;Data;Plot;Visualisation;Visualization;Fitting;xrdml;
