--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,14 +45,17 @@ jobs:
         - amd64
         - arm64
     steps:
-    - uses: actions/checkout@v3
-    - uses: docker/setup-qemu-action@v2
-      with:
-        image: tonistiigi/binfmt@sha256:df15403e06a03c2f461c1f7938b171fda34a5849eb63a70e2a2109ed5a778bde
-    - uses: diddlesnaps/snapcraft-multiarch-action@v1
-      id: build
-      with:
-        architecture: ${{ matrix.architecture }}
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup snapcraft
+        run: |
+          sudo snap install snapcraft --classic
+      - name: Build
+        id: build
+        env:
+          ARCHITECTURE: ${{ matrix.architecture }}
+        run: |
+          snapcraft remote-build --launchpad-accept-public-upload
 
   flake8-lint:
     name: flake8
