--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -6,7 +6,7 @@ confinement: strict
 compression: lzo
 license: GPL-3.0
 architectures:
-  - build-on: amd64
+  #- build-on: amd64
   - build-on: arm64
 
 
@@ -57,7 +57,6 @@ parts:
       - -usr/lib/python3/dist-packages/pip*
       - -usr/lib/python3/dist-packages/setuptools*
       - -usr/lib/python3/dist-packages/pkg_resources*
-      - -usr/lib/python3/dist-packages/setuptools*
     organize: 
       bin: usr/bin
       lib/python3.10/site-packages: usr/lib/python3/dist-packages
@@ -73,7 +72,7 @@ parts:
       - PYTHONPATH: $CRAFT_STAGE/usr/lib/python3/dist-packages:$PYTHONPATH
       - GI_TYPELIB_PATH: /snap/gnome-42-2204-sdk/current/usr/lib/$CRAFT_ARCH_TRIPLET/girepository-1.0:/snap/gnome-42-2204-sdk/current/usr/lib/girepository-1.0
     build-snaps:
-      - blueprint-compiler/latest/beta
+      - blueprint-compiler/latest/edge
     override-pull: |
       craftctl default
       patch -p1 < $CRAFT_PROJECT_DIR/snap/graphs.patch
