--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -6,7 +6,7 @@ confinement: strict
 compression: lzo
 license: GPL-3.0
 architectures:
-  #- build-on: amd64
+  - build-on: amd64
   - build-on: arm64
 
 
