--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
         architecture:
         - amd64
         - arm64
+      fail-fast: false
     steps:
       - name: Checkout
         uses: actions/checkout@v3
