appdata: Improve appdata for AppStream 1.0
- Use appstreamcli to validate appdata

Part of: https://gitlab.gnome.org/GNOME/Initiatives/-/issues/46

--- a/data/meson.build
+++ b/data/meson.build
@@ -39,11 +39,13 @@ appstream_file = i18n.merge_file(
   install_dir: join_paths(datadir, 'appdata')
 )
 
-appstream_util = find_program('appstream-util', required: false)
-if appstream_util.found()
+# Validate Appdata
+appstreamcli = find_program('appstreamcli', required: false)
+if (appstreamcli.found())
   test(
-    'Validate appstream file', appstream_util,
-    args: ['validate', '--nonet', appstream_file.full_path()]
+    'Validate appstream file', appstreamcli,
+    args: ['validate', '--no-net', '--explain', appstream_file.full_path()],
+    workdir: meson.current_build_dir()
   )
 endif
 
