update website and maintainer links
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/meson.build
+++ b/meson.build
@@ -16,7 +16,7 @@ dependencies = [
 application_id = 'se.sjoerd.Graphs'
 name = 'Graphs'
 copyright = '2022 - 2024'
-homepage_url = 'https://graphs.sjoerd.se/'
+homepage_url = 'https://apps.gnome.org/Graphs/'
 vcs_url = 'https://gitlab.gnome.org/World/Graphs'
 issue_url = vcs_url + '/issues'
 author = 'Sjoerd Stendahl'
