--- a/data/se.sjoerd.Graphs.appdata.xml.in.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in.in
@@ -25,10 +25,10 @@
   <launchable type="desktop-id">@APPLICATION_ID@.desktop</launchable>
   <translation type="gettext">graphs</translation>
   <url type="bugtracker">@ISSUE_URL@</url>
-  <url type="help">@VCS_URL@</url>
+  <url type="help">@HELP_URL@</url>
   <url type="homepage">@HOMEPAGE_URL@</url>
   <url type="vcs-browser">@VCS_URL@</url>
-  <url type="translate">https://hosted.weblate.org/engage/graphs/</url>
+  <url type="translate">https://l10n.gnome.org/module/Graphs/</url>
   <screenshots>
     <screenshot type="default">
       <caption>1 - Plot and manipulate any data of choice</caption>
